; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_schema_validate_device.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pci/extr_pci_iov_schema.c_pci_iov_schema_validate_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IOV_CONFIG_NAME = common dso_local global i8* null, align 8
@DRIVER_CONFIG_NAME = common dso_local global i8* null, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*, i8*)* @pci_iov_schema_validate_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pci_iov_schema_validate_device(i32* %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  store i32* null, i32** %12, align 8
  store i32* null, i32** %13, align 8
  store i32* null, i32** %14, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = call i32* @nvlist_get_nvlist(i32* %16, i8* %17)
  store i32* %18, i32** %9, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = load i8*, i8** @IOV_CONFIG_NAME, align 8
  %21 = call i32* @nvlist_get_nvlist(i32* %19, i8* %20)
  store i32* %21, i32** %10, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = load i8*, i8** @DRIVER_CONFIG_NAME, align 8
  %24 = call i32* @nvlist_get_nvlist(i32* %22, i8* %23)
  store i32* %24, i32** %11, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = call i32* @dnvlist_take_nvlist(i32* %25, i8* %26, i32* null)
  store i32* %27, i32** %12, align 8
  %28 = load i32*, i32** %12, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %32

30:                                               ; preds = %4
  %31 = load i32, i32* @EINVAL, align 4
  store i32 %31, i32* %15, align 4
  br label %77

32:                                               ; preds = %4
  %33 = load i32*, i32** %12, align 8
  %34 = load i8*, i8** @IOV_CONFIG_NAME, align 8
  %35 = call i32* @dnvlist_take_nvlist(i32* %33, i8* %34, i32* null)
  store i32* %35, i32** %13, align 8
  %36 = load i32*, i32** %13, align 8
  %37 = icmp eq i32* %36, null
  br i1 %37, label %38, label %40

38:                                               ; preds = %32
  %39 = load i32, i32* @EINVAL, align 4
  store i32 %39, i32* %15, align 4
  br label %77

40:                                               ; preds = %32
  %41 = load i32*, i32** %12, align 8
  %42 = load i8*, i8** @DRIVER_CONFIG_NAME, align 8
  %43 = call i32* @dnvlist_take_nvlist(i32* %41, i8* %42, i32* null)
  store i32* %43, i32** %14, align 8
  %44 = load i32*, i32** %14, align 8
  %45 = icmp eq i32* %44, null
  br i1 %45, label %46, label %48

46:                                               ; preds = %40
  %47 = load i32, i32* @EINVAL, align 4
  store i32 %47, i32* %15, align 4
  br label %77

48:                                               ; preds = %40
  %49 = load i32*, i32** %10, align 8
  %50 = load i32*, i32** %13, align 8
  %51 = call i32 @pci_iov_schema_validate_required(i32* %49, i32* %50)
  store i32 %51, i32* %15, align 4
  %52 = load i32, i32* %15, align 4
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %55

54:                                               ; preds = %48
  br label %77

55:                                               ; preds = %48
  %56 = load i32*, i32** %11, align 8
  %57 = load i32*, i32** %14, align 8
  %58 = call i32 @pci_iov_schema_validate_required(i32* %56, i32* %57)
  store i32 %58, i32* %15, align 4
  %59 = load i32, i32* %15, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %62

61:                                               ; preds = %55
  br label %77

62:                                               ; preds = %55
  %63 = load i32*, i32** %10, align 8
  %64 = load i32*, i32** %13, align 8
  %65 = call i32 @pci_iov_schema_validate_types(i32* %63, i32* %64)
  store i32 %65, i32* %15, align 4
  %66 = load i32, i32* %15, align 4
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %69

68:                                               ; preds = %62
  br label %77

69:                                               ; preds = %62
  %70 = load i32*, i32** %11, align 8
  %71 = load i32*, i32** %14, align 8
  %72 = call i32 @pci_iov_schema_validate_types(i32* %70, i32* %71)
  store i32 %72, i32* %15, align 4
  %73 = load i32, i32* %15, align 4
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %75, label %76

75:                                               ; preds = %69
  br label %77

76:                                               ; preds = %69
  br label %77

77:                                               ; preds = %76, %75, %68, %61, %54, %46, %38, %30
  %78 = load i32*, i32** %12, align 8
  %79 = load i8*, i8** @IOV_CONFIG_NAME, align 8
  %80 = load i32*, i32** %13, align 8
  %81 = call i32 @nvlist_move_nvlist(i32* %78, i8* %79, i32* %80)
  %82 = load i32*, i32** %12, align 8
  %83 = load i8*, i8** @DRIVER_CONFIG_NAME, align 8
  %84 = load i32*, i32** %14, align 8
  %85 = call i32 @nvlist_move_nvlist(i32* %82, i8* %83, i32* %84)
  %86 = load i32*, i32** %6, align 8
  %87 = load i8*, i8** %8, align 8
  %88 = load i32*, i32** %12, align 8
  %89 = call i32 @nvlist_move_nvlist(i32* %86, i8* %87, i32* %88)
  %90 = load i32, i32* %15, align 4
  ret i32 %90
}

declare dso_local i32* @nvlist_get_nvlist(i32*, i8*) #1

declare dso_local i32* @dnvlist_take_nvlist(i32*, i8*, i32*) #1

declare dso_local i32 @pci_iov_schema_validate_required(i32*, i32*) #1

declare dso_local i32 @pci_iov_schema_validate_types(i32*, i32*) #1

declare dso_local i32 @nvlist_move_nvlist(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
